# InjectionForgeProX

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  evaluate.py  forge_x.py  injectionforge_results.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: adaptive_agent.py  analyzer.py  attack_tree.py  auth.py  auto_discovery.py  config.py  database.py  engine.py  execution_engine.py  language.py  llm_generator.py  obfuscator.py  paths.py  payload_engine.py  payload_generator.py  payloads.py  profiler.py  rate_limiter.py  redaction.py  reporter.py  tls_fingerprint.py  transport.py  utils.py  validator.py  waf_bypass.py
core/connectors/: base.py  claude.py  cohere.py  gemini.py  graphql.py  huggingface.py  mock_target.py  ollama.py  openai.py  rest.py  sse.py  websocket.py
data/: benchmark.json  labeled_test_set.json  payloads_advanced.json  payloads_advanced_id.json  payloads_agent.json  payloads_agent_id.json  payloads_basic.json  payloads_basic_id.json  payloads_graphql.json  payloads_graphql_id.json  payloads_indirect.json  payloads_indirect_id.json  refusal_phrases.txt  refusal_phrases_id.txt  user_agents.txt
docs/: PRODUCTION.md  USAGE.md
examples/profiles/: mock-strict.json  rest-balanced.json
scripts/: build_release.py
tests/: test_adaptive_agent.py  test_analyzer_modes_and_evidence.py  test_analyzer_regression_fp_fn.py  test_connectors.py  test_dependency_constraints.py  test_integration.py  test_language.py  test_llm_generator.py  test_obfuscator.py  test_payload_manager.py  test_production_features.py  test_rest_connector.py  test_security_hardening_regressions.py  test_transport_retry_contract.py  test_v112_release_hardening.py  test_v113_privacy_regressions.py  tests_analyzer.py  tests_payloads.py  tests_reporter.py
