[build-system]
requires = [
  "setuptools>=68,<83",
  "wheel>=0.42,<1",
]
build-backend = "setuptools.build_meta"

[project]
name = "injectionforge-pro-x"
version = "1.1.5"
description = "Authorized prompt-injection and LLM chatbot security testing framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Mafifrizi"}]
keywords = ["llm-security", "prompt-injection", "chatbot-security", "security-testing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = [
  "requests>=2.31,<3",
  "sentence-transformers>=2.7,<4",
  "websocket-client>=1.6,<2",
  "sseclient-py>=1.8,<2",
  "colorama>=0.4,<1",
  "cloudscraper>=1.2,<2",
  "curl_cffi>=0.7,<1",
  "wafw00f>=2.2,<3",
  "PySocks>=1.7.1,<2",
  "reportlab>=4.0,<5",
  "openpyxl>=3.1,<4",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "responses>=0.25,<1",
]
browser = [
  "selenium>=4.20,<5",
  "undetected-chromedriver>=3.5,<4",
]

[project.scripts]
injectionforge = "forge_x:main"

[tool.setuptools]
py-modules = ["forge_x", "evaluate"]
include-package-data = false

[tool.setuptools.packages.find]
include = ["core*"]
exclude = ["data*", "tests*", "docs*", "examples*", "scripts*"]
namespaces = false

[tool.setuptools.data-files]
"share/injectionforge/data" = [
  "data/benchmark.json",
  "data/labeled_test_set.json",
  "data/payloads_advanced.json",
  "data/payloads_advanced_id.json",
  "data/payloads_agent.json",
  "data/payloads_agent_id.json",
  "data/payloads_basic.json",
  "data/payloads_basic_id.json",
  "data/payloads_graphql.json",
  "data/payloads_graphql_id.json",
  "data/payloads_indirect.json",
  "data/payloads_indirect_id.json",
  "data/refusal_phrases.txt",
  "data/refusal_phrases_id.txt",
  "data/user_agents.txt",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
